Added monoplane native storage adapter

--- a/src/main/resources/org/wildfly/monoplane/probe/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/wildfly/monoplane/probe/extension/LocalDescriptions.properties
@@ -15,7 +15,7 @@ probe.storage-adapter.url=The url of the remote storage system
 probe.storage-adapter.user=Access token of the storage system
 probe.storage-adapter.password=Access token of the storage system
 probe.storage-adapter.token=Access token of the storage system
-probe.storage-adapter.name=Name of the storage adapter type (rhq|influx)
+probe.storage-adapter.name=Name of the storage adapter type (rhq|influx|mono)
 probe.storage-adapter.db=Name of the database to write to
 
 probe.server-monitor.data-input=Definition of a single resource attribute to monitor
