--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,13 @@
                 <optional>true</optional>
                 <version>${version.org.jboss.logging.jboss-logging-tools}</version>
             </dependency>
+
+            <dependency>
+              <groupId>com.datastax.cassandra</groupId>
+              <artifactId>cassandra-driver-core</artifactId>
+              <version>2.1.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -295,6 +302,12 @@
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-core</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
         <dependency>
             <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
